# CICD

./: README.md  pyproject.toml
.github/workflows/: tests.yml
test/: test_main.py
