[tool.poetry]
name = "test"
version = "0.1.0"
description = "this is the poetry desc"
authors = ["David <david.perez.campos82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"